# earmark

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  earmark.db  earmark.db.bak-review  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docker/: DOCKER.md  Dockerfile  docker-compose.yml  nginx.conf
docs/: AbsEbookMappingUI.md  AlignmentTesting.md  AudioBookEbookMapping.md  CalibreWebIntegration.md  Frontend.md  HomelabSetup.md  KosyncApi.md  LogsTab.md  RegistrationKosyncLinking.md  Settings.md  Sync.md
earmark/: auth.py  config.py  database.py  earmark_auth.py  main.py  models.py  scheduler.py  schemas.py  seed.py  utils.py
earmark/routers/: auth.py  mappings.py  progress.py  users.py
earmark/services/: alignment.py  audiobookshelf.py  epub.py  progress.py
frontend/: earmark.db  package-lock.json  package.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
migrations/: env.py
migrations/versions/: 0003be688fd1_tz_aware_timestamps_and_unique_latest_.py  1fba6086467b_baseline_schema.py  71b9eea6dfa1_add_abs_synced_at_to_reading_progress.py  95dcc26d3abc_add_created_by_user_id_to_alignment_jobs.py  a3b1326ad413_add_abs_sync_status_to_reading_progress.py  a3f2e1d4c5b6_add_app_settings_table.py
scripts/: align.py  install_aeneas.sh  patch_aeneas_setup.py  patch_aeneas_wavfile.py
src/earmark/: app_settings.py  auth.py  backfill_kosync_documents.py  config.py  database.py  earmark_auth.py  logging_config.py  main.py  models.py  ratelimit.py  reset_db.py  scheduler.py  schemas.py  seed.py  utils.py
src/earmark/routers/: alignment.py  auth.py  logs.py  mappings.py  progress.py  settings.py  users.py
src/earmark/services/: alignment.py  audiobookshelf.py  progress.py  sync_position.py  transcribe_worker.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/scripts/: process_logo.py
src/frontend/src/: app.css  app.d.ts  app.html
testing/: README.md  diff_chapters.py  ebook_hash.py  test_alignment.py
testing/bruno/: bruno.json  healthcheck.bru
testing/bruno/alignment/: create-job.bru  get-job.bru  get-sync-map.bru  list-jobs.bru
testing/bruno/auth/: login.bru  register.bru
testing/bruno/environments/: local.bru  (+1 more)
tests/: conftest.py  test_alignment.py  test_earmark_auth.py  test_ebook_sources.py  test_healthcheck.py  test_logs.py  test_progress.py  test_scheduler.py  test_sync.py  test_users.py  test_web_progress.py
(+63 files in other folders)
