[project]
name = "earmark"
version = "0.1.0"
description = "Syncs Audiobookshelf and KOSync reading progress"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "ebooklib>=0.18",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "ffmpeg-python>=0.2",
    "numpy>=1.24",
    "rich>=13.0",
    "rapidfuzz>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
# WhisperX pulls in torch, which currently has wheels only for Python ≤3.13.
# Install with: uv pip install -e ".[align]"  (requires Python 3.12 or 3.13).
align = [
    "whisperx>=3.1",
]

[project.scripts]
earmark-seed = "earmark.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earmark"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "testing"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
